--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -79,7 +79,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
 
   assets:
-    - lib/images/lottie/123.jpg
+    - lib/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
