--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,12 @@ dependencies:
   camera: ^0.10.5+2
   line_icons: ^2.0.3
   easy_sidemenu: ^0.4.2
+  get: ^4.6.5
+  image_cropper: ^5.0.0
+  image_picker: ^1.0.1
+  firebase_storage: ^11.2.5
+  dotted_border: ^2.0.0+3
+  percent_indicator: ^4.2.3
 
 dev_dependencies:
   flutter_test:
