--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,10 @@ dependencies:
   dotted_border: ^2.0.0+3
   percent_indicator: ^4.2.3
 
+  # The following adds the HERE SDK for Flutter plugin folder to your application.
+  here_sdk:
+    path: plugins/here_sdk
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
