done rec reg and org reg complete

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "cSpell.words": [
         "'em",
         "donat"
-    ]
+    ],
+    "cmake.sourceDirectory": "D:/Programming Workplace/Projects/Donatem/donatem/linux"
 }
