--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   dotted_border: ^2.0.0+3
   percent_indicator: ^4.2.3
   http: ^1.1.0
+  firebase_pagination: ^3.0.0
 
 dev_dependencies:
   flutter_test:
