--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,12 @@ dependencies:
   percent_indicator: ^4.2.3
   http: ^1.1.0
   firebase_pagination: ^3.0.0
+  flutterflow_paginate_firestore: ^1.0.3+1
+  multi_select_flutter: ^4.1.3
+  chip_list: ^2.4.3+8
+  pinput: ^3.0.0
+  intl_phone_number_input: ^0.7.3+1
+  flutter_libphonenumber: ^2.1.5
 
 dev_dependencies:
   flutter_test:
