--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -73,6 +73,8 @@ dependencies:
   intl_phone_number_input: ^0.7.3+1
   flutter_libphonenumber: ^2.1.5
   latlong2: ^0.9.0
+  qr_code_scanner: ^1.0.1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
